package com.arifikhsan.jetpackmoviecatalogue.ui.home

import android.content.Context
import android.view.View
import android.widget.TextView
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.ViewInteraction
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.platform.app.InstrumentationRegistry
import com.arifikhsan.jetpackmoviecatalogue.R
import com.arifikhsan.jetpackmoviecatalogue.data.source.remote.MovieRemoteDataSource
import com.arifikhsan.jetpackmoviecatalogue.data.source.remote.TVShowRemoteDataSource
import com.arifikhsan.jetpackmoviecatalogue.data.source.remote.network.NetworkConfig
import com.arifikhsan.jetpackmoviecatalogue.util.EspressoIdlingResource
import org.hamcrest.Matcher
import org.junit.After
import org.junit.Before
import org.junit.Test

class HomeActivityTest {
    private val networkConfig = NetworkConfig()
    private val movieRemoteDataSource = MovieRemoteDataSource(networkConfig.getApiService())
    private val tvShowRemoteDataSource = TVShowRemoteDataSource(networkConfig.getApiService())

    private val sampleMovies = movieRemoteDataSource.getMovies()
    private val sampleTVShows = tvShowRemoteDataSource.getTVShows()

    private lateinit var instrumentalContext: Context

    @Before
    fun setUp() {
        instrumentalContext = InstrumentationRegistry.getInstrumentation().targetContext
        IdlingRegistry.getInstance().register(EspressoIdlingResource.getEspressoIdlingResource())

        ActivityScenario.launch(HomeActivity::class.java)
    }

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.getEspressoIdlingResource())
    }

    @Test
    fun loadMovieTab() {
        onView(withText("MOVIES")).perform(click())
        onView(withId(R.id.fr_movies)).check(matches(isDisplayed()))
    }

    @Test
    fun loadTVShowTab() {
        onView(withText("TV SHOWS")).perform(click())
        onView(withId(R.id.fr_tv_shows)).check(matches(isDisplayed()))
    }

    @Test
    fun loadFavoriteTab() {
        onView(withText("FAVORITE")).perform(click())
        onView(withId(R.id.fr_favorite)).check(matches(isDisplayed()))
    }

    @Test
    fun upButton() {
        onView(withText("FAVORITE")).perform(click())
        onView(withId(R.id.fr_favorite)).check(matches(isDisplayed()))
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("TV SHOWS")).check(matches(isDisplayed()))
        onView(withId(R.id.fr_tv_shows)).check(matches(isDisplayed()))
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("MOVIES")).check(matches(isDisplayed()))
        onView(withId(R.id.fr_movies)).check(matches(isDisplayed()))
    }

    // Movies Fragment

    @Test
    fun loadMovies() {
        onView(withText("MOVIES")).perform(click())
        onView(withId(R.id.rv_movies)).check(matches(isDisplayed()))
        val moviesSize = sampleMovies.value?.body?.results?.size!!
        onView(withId(R.id.rv_movies)).perform(scrollToPosition<RecyclerView.ViewHolder>(moviesSize))
    }

    @Test
    fun loadMovie() {
        onView(withText("MOVIES")).perform(click())
        onView(withId(R.id.rv_movies)).check(matches(isDisplayed()))

        val res = sampleMovies.value?.body?.results!!
        val sampleMovie = res.first()
        val position = res.indexOf(sampleMovie)

        onView(withId(R.id.rv_movies)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(position, click())
        )

        onView(withId(R.id.tv_title)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_title)).check(matches(withText(sampleMovie?.title)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(sampleMovie?.overview)))
        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_date)).check(matches(withText(sampleMovie?.releaseDate)))
    }

    @Test
    fun favoriteMovie() {
        onView(withText("FAVORITE")).perform(click())
        val moviesCount = getText(onView(withId(R.id.tv_movies_count))).split(" ").first().toInt()

        onView(withText("MOVIES")).perform(click())
        onView(withId(R.id.rv_movies)).check(matches(isDisplayed()))

        val res = sampleMovies.value?.body?.results!!
        val sampleMovie = res.first()
        val position = res.indexOf(sampleMovie)

        onView(withId(R.id.rv_movies)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(position, click())
        )

        onView(withId(R.id.action_favorite)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("FAVORITE")).perform(click())
        onView(withId(R.id.tv_movies_count)).check(matches(withText("${moviesCount + 1} items")))
        onView(withId(R.id.card_movies)).perform(click())
        onView(withText(sampleMovie?.title)).check(matches(isDisplayed()))
        onView(withText(sampleMovie?.title)).perform(click())

        onView(withId(R.id.tv_title)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_title)).check(matches(withText(sampleMovie?.title)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(sampleMovie?.overview)))
        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_date)).check(matches(withText(sampleMovie?.releaseDate)))

        onView(withId(R.id.action_favorite)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withId(R.id.tv_movies_count)).check(matches(withText("$moviesCount items")))
    }

    // TV Shows Fragment

    @Test
    fun loadTVShows() {
        onView(withText("TV SHOWS")).perform(click())
        onView(withId(R.id.rv_tv_shows)).check(matches(isDisplayed()))

        val size = sampleTVShows.value?.body?.results?.size!!
        onView(withId(R.id.rv_tv_shows)).perform(scrollToPosition<RecyclerView.ViewHolder>(size))
    }

    @Test
    fun loadTVShow() {
        onView(withText("TV SHOWS")).perform(click())
        onView(withId(R.id.rv_tv_shows)).check(matches(isDisplayed()))

        val res = sampleTVShows.value?.body?.results!!
        val sampleTVShow = res.first()
        val position = res.indexOf(sampleTVShow)

        onView(withId(R.id.rv_tv_shows)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(position, click())
        )

        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_name)).check(matches(withText(sampleTVShow?.name)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(sampleTVShow?.overview)))
        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_date)).check(matches(withText(sampleTVShow?.firstAirDate)))
    }

    @Test
    fun favoriteTVShow() {
        onView(withText("FAVORITE")).perform(click())
        val tvShowsCount = getText(onView(withId(R.id.tv_tv_show_count))).split(" ").first().toInt()

        onView(withText("TV SHOWS")).perform(click())
        onView(withId(R.id.rv_tv_shows)).check(matches(isDisplayed()))

        val res = sampleTVShows.value?.body?.results!!
        val sampleTVShow = res.first()
        val position = res.indexOf(sampleTVShow)

        onView(withId(R.id.rv_tv_shows)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(position, click())
        )

        onView(withId(R.id.action_favorite)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("FAVORITE")).perform(click())
        onView(withId(R.id.tv_tv_show_count)).check(matches(withText("${tvShowsCount + 1} items")))
        onView(withId(R.id.card_tv_shows)).perform(click())
        onView(withText(sampleTVShow?.name)).check(matches(isDisplayed()))
        onView(withText(sampleTVShow?.name)).perform(click())

        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_name)).check(matches(withText(sampleTVShow?.name)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(sampleTVShow?.overview)))
        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_date)).check(matches(withText(sampleTVShow?.firstAirDate)))

        onView(withId(R.id.action_favorite)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withId(R.id.tv_tv_show_count)).check(matches(withText("$tvShowsCount items")))
    }

    private fun getText(matcher: ViewInteraction): String {
        var text = String()
        matcher.perform(object : ViewAction {
            override fun getConstraints(): Matcher<View> {
                return isAssignableFrom(TextView::class.java)
            }

            override fun getDescription(): String {
                return "Text of the view"
            }

            override fun perform(uiController: UiController, view: View) {
                val tv = view as TextView
                text = tv.text.toString()
            }
        })

        return text
    }


}